objects/Task_Rework_Request__c.object
<CustomObject>
    <fields>
        <fullName>End_DateTime__c</fullName>
        <description>Residential Installation Project Mgmt
Priti Rastogi
Captures the date the rework was completed or cancelled</description>
        <label>End DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Explanation__c</fullName>
        <description>Residential Installation Project Mgmt
Priti Rastogi
An explanation for why the task must be reworked</description>
        <label>Explanation</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initiating_Task__c</fullName>
        <description>Residential Installation Project Mgmt
Priti Rastogi
The task that was put on hold because a previous task needed to be reworked</description>
        <label>Initiating Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Task__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project Task</value>
            </filterItems>
            <filterItems>
                <field>Project_Task__c.Status_Type__c</field>
                <operation>equals</operation>
                <value>Open</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Task Rework Requests (Initiating Task)</relationshipLabel>
        <relationshipName>Task_Rework_Requests</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Reason_Level_1__c</fullName>
        <label>Reason Level 1</label>
        <picklist>
            <picklistValues>
                <fullName>Incorrect Survey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Upsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Downsize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Utility Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AHJ Redline</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HOA Rejection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR AM/EC Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SPWR PM Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premature Task Completion</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Level_2__c</fullName>
        <label>Reason Level 2</label>
        <picklist>
            <controllingField>Reason_Level_1__c</controllingField>
            <picklistValues>
                <fullName>Additional Documentation Required</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aesthetics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>As-Built</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Builder Architectural Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Contractual Changes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer error - At Fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Designer Error - Not At Fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fit Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inverter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing/Incorrect Equipment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing/Incorrect Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing/Incorrect Placard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Missing Stamps</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Module</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monitoring</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product Compliance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Racking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resurvey-at fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Resurvey-not at fault</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Roof Attachment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Design - Architectural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Design - Electrical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>System Design - Structural</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premature Task compilation(Level 1)</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Level_3__c</fullName>
        <label>Reason Level 3</label>
        <picklist>
            <controllingField>Reason_Level_2__c</controllingField>
            <picklistValues>
                <fullName>Max fit - Dimension</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max fit - Obstruction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Max fit - Scaling</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Drafting Errors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jurisdiction Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North Arrow</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Paper Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PE Stamp</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plan Type</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Title Block Info</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vicinity Map</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Project Info (Cover)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Array Layout</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FM Path</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framing Detail - Incorrect Attachments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framing Detail - Incorrect Detail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Framing Detail - Incorrect Spans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Garage Handing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Calculation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Electrical Details/Notes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Conductor Schedule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect Spec Sheet/Template</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect/Missing BOS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incorrect BOS size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection: 120% Rule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Interconnection: Load Relocation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Labeling Specs</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Structural Details/Notes</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rework_Category__c</fullName>
        <description>Residential Installation Project Mgmt
Priti Rastogi</description>
        <label>Rework Category</label>
        <picklist>
            <picklistValues>
                <fullName>Resurvey</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Correction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rework_Task__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Residential Installation Project Mgmt
Priti Rastogi
The task that was reopened because of this rework request</description>
        <label>Rework Task</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Project_Task__c.RecordTypeId</field>
                <operation>equals</operation>
                <value>Project Task</value>
            </filterItems>
            <filterItems>
                <field>Project_Task__c.Status_Type__c</field>
                <operation>equals</operation>
                <value>Completed</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Project_Task__c</referenceTo>
        <relationshipLabel>Task Rework Requests (Rework Task)</relationshipLabel>
        <relationshipName>Task_Rework_Requests1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_DateTime__c</fullName>
        <defaultValue>Now()</defaultValue>
        <description>Residential Installation Project Mgmt
Priti Rastogi
The datetime this request was created</description>
        <label>Start DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>Residential Installation Project Mgmt
Priti Rastogi
The status of the rework request</description>
        <inlineHelpText>To complete task rework request, complete task that rework was requested on.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Task Rework Request</label>
    <nameField>
        <displayFormat>TRR-{00000}</displayFormat>
        <label>Task Rework Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Task Rework Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Cannot_change_Rework_Task</fullName>
        <active>true</active>
        <description>Once the rework task is set it cannot be changed</description>
        <errorConditionFormula>AND(ISCHANGED(Rework_Task__c),NOT(ISNEW()))</errorConditionFormula>
        <errorMessage>Rework Task cannot be updated once selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Initiating_and_Rework_Task_cannot_match</fullName>
        <active>true</active>
        <description>Initiating and Rework Task cannot be the same</description>
        <errorConditionFormula>Initiating_Task__c =  Rework_Task__c</errorConditionFormula>
        <errorMessage>Initiating Task and Rework Task must be different</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rework_Task_must_be_Completed</fullName>
        <active>true</active>
        <description>When selecting a rework task, it must be in status &apos;completed&apos;</description>
        <errorConditionFormula>AND(OR(ISCHANGED(Rework_Task__c), ISNEW()), TEXT(Rework_Task__r.Status__c) != &apos;Completed&apos;)</errorConditionFormula>
        <errorMessage>Rework Task must be a Completed Task</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Rework_and_Initiating_Task_Project</fullName>
        <active>true</active>
        <description>The rework task and initiating task must come from the same project</description>
        <errorConditionFormula>Initiating_Task__r.Residential_Project__c != Rework_Task__r.Residential_Project__c</errorConditionFormula>
        <errorMessage>The rework task and initiating task must be from the same residential project.</errorMessage>
    </validationRules>
</CustomObject>